hphp/test/slow/namespace/dynamic_extra_slash_func.php.expectf
HipHop Fatal error: Undefined function: \\A\f in %s/test/slow/namespace/dynamic_extra_slash_func.php on line 10
